2008-08-15  Ethan Merritt  <merritt@u.washington.edu>

	* term/dumb.trm: Accept terminal size in the form used by most other
	terminal drivers.   'set term dumb size 80,23"

	* src/set.c (set_tic_prop) src/graph3d.c (ztick_callback):
	Allow tic labels on z axis to have 'tc palette z'
	Feature request #1689545

2008-08-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c src/command.h src/command.c (do_string) src/mouse.c:
	Add a flag parameter to do_string() indicating whether the string is to
	be freed immediately after copying. This should fix memory leaks both in
	the new eval_command() and the existing call in pop_terminal().

2008-08-12  Juergen Wieferink <wieferink@freenet.de>

	* src/misc.h src/misc.c: Make lf_push() and lf_pop() global.

	* src/command.c (do_string): Make use of lf_push() and lf_pop() to avoid
	memory leaks on int_error().

	* src/command.h src/command.c src/tables.c src/plot.c docs/gnuplot.doc:
	New command `evaluate` executes the commands given by a string argument.

2008-08-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/readline.c (ansi_getc): Teach built-in readline to map
	CSI-H to ^A and CSI-F to ^E, which offers some hope that the <end> and
	<home> keys will do something useful.
	Bug #1556607

2008-08-06  Benjamin <lindnerb@users.sourceforge.net>

	* term/post.trm: Fix parsing error for option "palfuncparam".
	Bug #2039912

	* term/emf.trm: Allow fractional linewidths; do not allow dash pattern
	length to go to zero.
	Bug #2040244

2008-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Provide a separate "dashlength" option similar
	to the post, pdf, gd, and cairo terminals.

2008-08-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.h src/eval.c: Track min/max range of data on each axis
	indepently of the current axis range itself.  Export to the
	corresponding variables GPVAL_DATA_{AXIS}_MIN and so on.
	This is useful all by itself, but also lays the groundwork for